manifests/robozome/controller/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: robozome
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: robozome
  template:
    metadata:
      labels:
        app.kubernetes.io/component: robozome
    spec:
      serviceAccountName: robozome
      containers:
      - name: robozome
        image: robozome
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 100Mi
