manifests/robozome/controller/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: robozome
spec:
  ports:
  - name: webhook
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app.kubernetes.io/component: robozome
