manifests/robozome/controller/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: robozome
spec:
  to:
    kind: Service
    name: robozome
